# ClientServer-withDocker

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
calculator/: calculator.cpp  calculator.h
client/: client.cpp  clientfunc.cpp  clientfunc.h
server/: server.cpp  serverfunc.cpp  serverfunc.h
src/: server.cpp
